# GlassBox-Backend

./: .env.example  .gitignore  Dockerfile  README.md  add_column.py  drop_schema.py  pyproject.toml
alembic/: env.py
alembic/versions/: 58aff3490f93_add_is_active_to_traces.py  9699e24ec699_glass_box_schema.py  c4148cbf9881_add_guest_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: analytics.py  chat.py  mock_stream.py  stream.py  traces.py
app/core/: config.py  encryption.py  exceptions.py  fingerprint_matcher.py  guest_auth.py  rate_limiter.py  security.py  security_events.py  startup.py  token_pricing.py
app/crud/: __init__.py  crud_guest_user.py  crud_session.py  crud_token_usage.py  crud_trace.py
app/db/: base.py  encrypted_types.py  session.py
app/engine/: agent_engine.py  prompt_builder.py  stream_engine.py
app/engine/tools/: __init__.py  calculator.py
app/models/: __init__.py  agent.py  chat_session.py  enums.py  guest_user.py  trace.py  trace_step.py
app/schemas/: __init__.py  chat.py  guest_user.py  session.py  trace.py
docs/: API_Integration.md  DbSchema.md  Feature.md  Project.md  Tasklist.md  UserFlow.md  agents.csv  trace_steps.xlsx  traces.csv
examples/: guest_chat_demo.html
scripts/: migrate_encrypt_traces.py
tests/: conftest.py
tests/unit/: test_calculator.py  test_main.py
